# thorp

./: .clang-format  .gitignore  README.md  thorp.rosinstall
thorp_apps/: CMakeLists.txt  README.md  package.xml
thorp_apps/launch/: block_manip.launch.DEPRECATED  cat_hunter.launch  explore_house.launch  object_gatherer.launch  object_manip.launch  patrol_2_points.launch  pickup_objects.launch  stack_all_cubes.launch
thorp_apps/param/: apps_config.yaml
thorp_arm_ctrl/: .cproject  .project  .pydevproject  CMakeLists.txt  README.md  package.xml  setup.py
thorp_arm_ctrl/graveyard/: MOVE_GROUP_pickup_object_server.cpp
thorp_arm_ctrl/launch/: controllers.launch
thorp_arm_ctrl/param/: controllers.yaml  pick_and_place.yaml
thorp_arm_ctrl/scripts/: test_arm_ctrl_servers.py  test_pickup_object.py
thorp_arm_ctrl/src/: house_keeping_server.cpp  interactive_manip_server.cpp  joint_state_watchdog.cpp  move_to_target_server.cpp  pickup_object_server.cpp  place_object_server.cpp  thorp_arm_controller.cpp  thorp_arm_ctrl_server.cpp
thorp_boards/: .cproject  .project  .~lock.README.md#  CMakeLists.txt  README.md  package.xml
thorp_boards/graveyard/: arduino.cpp.Bosch  arduino.cpp_LASER  arduino.ino.readAnalog  opencm.h_PRE_EXPERIMENTS  opencm.ino_OLD_EXPERIMENTS  opencm.ino_PRE_EXPERIMENTS
thorp_boards/launch/: arduino.launch  opencm.launch
thorp_boards/param/: arduino.yaml  opencm.yaml
thorp_boards/resources/: 58-arduino.rules  59-opencm.rules  sharp_calib.m  sonar_poses.m
thorp_bringup/: .cproject  .project  CMakeLists.txt  README.md  package.xml
thorp_bringup/apps/: object_gatherer.launch  object_manip.launch  pickup_objects.launch  stack_all_cubes.launch
thorp_bringup/docker/: .dockerignore  Dockerfile  patch_ignition.yaml  thorp.rosinstall
thorp_bringup/graveyard/: block_gatherer.launch.SIM_APP  block_manip.launch  exec_smach.launch.BAK  exec_smach.launch.NO_GROUPS  object_manip.launch.BAK  show_tk_fonts.py
thorp_bringup/launch/: block_manip.launch  block_manip_external.launch  blocks_manip.launch  calibrate.launch  calibrate_external.launch  exec_smach.launch  fake_arm.launch  moveit.launch  navigation.launch  object_manip.launch  object_manip_tbarm.launch  object_manip_thorp.launch  object_rec.launch  sonar_nav.launch  test_arm.launch  thorp.launch  thorp_app.launch  thorp_gazebo.launch  thorp_nav.launch  thorp_obj_rec.launch  thorp_robot.launch  thorp_sim.launch  thorp_stage.launch  thorp_viz.launch  view_model.launch
thorp_bringup/param/: custom_move_base.yaml  global_dynamic_costmap.yaml  vel_multiplexer.yaml  vel_smoother.yaml  vel_smoother_gazebo.yaml
thorp_bringup/resources/: thorp.prf
thorp_bringup/rviz/: exploration.rviz  gathering.rviz  hunting.rviz  manipulation.rviz  navigation.rviz  user_commands.yaml  view_all.rviz  view_manip.rviz  view_model.rviz  view_moveit.rviz  view_nav.rviz  view_navigation.rviz  view_obj_rec.rviz  view_perc.rviz
thorp_bringup/scripts/: fake_joint_pub.py  fake_servos_srv.py  gripper_cmd.py  keyboard_ctrl.py  show_velocity.py  user_commands.py
thorp_bringup/urdf/: calib  kinect.urdf.xacro  standalone_arm.urdf.xacro  thorp.urdf.xacro  thorp_gazebo.urdf.xacro  xtion.urdf.xacro
thorp_bt_cpp/: CMakeLists.txt  cob_obj_pub.py  interrupt_explore.xml  package.xml
thorp_bt_cpp/bt/: cat_hunter.xml  explore_house.xml  manipulation.xml  navigation.xml  node_models.xml  object_gatherer.xml  object_manip.xml  patrol_2_points.xml  pickup_objects.xml
thorp_bt_cpp/groot/: thorp.btproj
thorp_bt_cpp/launch/: bt_runner.launch
thorp_bt_cpp/src/: bt_nodes.cpp  bt_runner.cpp  bt_runner_node.cpp
thorp_cannon/: .project  CMakeLists.txt  README.md  package.xml
thorp_cannon/launch/: cannon.launch
thorp_cannon/nodes/: cannon_ctrl.py
thorp_cannon/scripts/: cannon_cmd.py
thorp_cannon/src/: gazebo_cannon_plugin.cpp
thorp_cannon/urdf/: cannon.urdf.xacro
thorp_costmap_layers/: CMakeLists.txt  package.xml  semantic_layer.xml  setup.py
thorp_costmap_layers/cfg/: SemanticLayer.cfg
thorp_costmap_layers/msg/: Object.msg
thorp_costmap_layers/plugins/: semantic_layer.xml
thorp_costmap_layers/scripts/: clear_area.py  fake_obstacle.py
thorp_costmap_layers/src/: base_interface.cpp  scene_interface.cpp  semantic_layer.cpp  spatial_hash.cpp  srv_iface_client.cpp  srv_interface.cpp  visualization.cpp
thorp_costmap_layers/srv/: UpdateObjects.srv
thorp_costmap_layers/test/: test_semantic_layer.py
thorp_description/: .project  CMakeLists.txt  README.md  package.xml
thorp_description/meshes/: arm_mount.stl  orig_arm_mount.stl  senz3d_mount.stl  tray.stl  tray_w_holes.stl  xtion_mount.stl
thorp_description/scripts/: arm_mount.scad  calc_inertia.m  tray.scad  tubes_poses.m  xtion_mount.scad
thorp_description/urdf/: calib  cannon.urdf.xacro  kinect.urdf.xacro  senz3d.urdf.xacro  standalone_arm.urdf.xacro  thorp.urdf.xacro  thorp.urdf.xacro.senz3d  thorp_gazebo.urdf.xacro  xtion.urdf.xacro
thorp_manipulation/: CMakeLists.txt  README.md  package.xml  setup.py
thorp_manipulation/graveyard/: MOVE_GROUP_pickup_object_server.cpp  MOVE_GROUP_place_object_server.cpp  has_effort.hpp  pickup_object_server.cpp.W_DEBUG_x_aligned
thorp_manipulation/launch/: controllers.launch  manipulation.launch
thorp_manipulation/nodes/: picking_planner_server.py
thorp_manipulation/param/: controllers.yaml  pick_and_place.yaml  pick_and_place_gazebo.yaml
thorp_manipulation/resources/: 60-usb2ax.rules
thorp_manipulation/scripts/: test_arm_ctrl_servers.py  test_pickup_object.py
thorp_manipulation/src/: house_keeping_server.cpp  interactive_manip_server.cpp  joint_state_watchdog.cpp  manipulation_server.cpp  move_to_target_server.cpp  pickup_object_server.cpp  (+3 more)
thorp_mbf_plugins/: CMakeLists.txt  package.xml
thorp_msgs/: .gitignore  .project  CMakeLists.txt  package.xml
thorp_navigation/: CMakeLists.txt  README.md  package.xml
thorp_obj_rec/: .cproject  .project  .pydevproject  CMakeLists.txt  package.xml
thorp_perception/: CMakeLists.txt  package.xml
thorp_simulation/: .cproject  .project  CMakeLists.txt  package.xml
(+791 files in other folders)
