<?xml version="1.0"?>
<package>
  <name>thorp_apps</name>
  <version>0.1.0</version>
  <description>Launch files for Thorp apps</description>
  <maintainer email="jsantossimon@gmail.com">Jorge Santos Simón</maintainer>
  <author email="jsantossimon@gmail.com">Jorge Santos Simón</author>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/corot/thorp/issues</url>
  <url type="repository">https://github.com/corot/thorp</url>
  <url type="website">http://wiki.ros.org/thorp_apps</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>thorp_bringup</run_depend>
  <run_depend>thorp_smach</run_depend>
  <run_depend>thorp_simulation</run_depend>
  <run_depend>thorp_toolkit</run_depend>
  <run_depend>thorp_description</run_depend>
  <run_depend>thorp_moveit_config</run_depend>
  <run_depend>thorp_navigation</run_depend>
  <run_depend>thorp_perception</run_depend>
  <run_depend>thorp_manipulation</run_depend>
</package>
