<?xml version="1.0"?>
<package>
  <name>thorp_boards</name>
  <version>0.1.0</version>
  <description>Software that interfaces with Thorp's boards</description>
  <maintainer email="jsantossimon@gmail.com">Jorge Santos Simón</maintainer>
  <author email="jsantossimon@gmail.com">Jorge Santos Simón</author> 

  <license>BSD</license>

  <url type="bugtracker">https://github.com/corot/thorp/issues</url>
  <url type="repository">https://github.com/corot/thorp</url>
  <url type="website">http://wiki.ros.org/thorp_boards</url> 

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>adc_driver</build_depend>
  <build_depend>gpio_driver</build_depend>
  <build_depend>arduino_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>yocs_math_toolkit</build_depend>
  
  <run_depend>adc_driver</run_depend>
  <run_depend>gpio_driver</run_depend>
  <run_depend>arduino_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>yocs_math_toolkit</run_depend>
</package>
