<?xml version="1.0"?>
<package>
  <name>thorp_bringup</name>
  <version>0.1.0</version>
  <description>Basic configuration and launch files for Thorp robot</description>
  <maintainer email="jsantossimon@gmail.com">Jorge Santos Simón</maintainer>
  <author email="jsantossimon@gmail.com">Jorge Santos Simón</author>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/corot/thorp/issues</url>
  <url type="repository">https://github.com/corot/thorp</url>
  <url type="website">http://wiki.ros.org/thorp_bringup</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>python-tk</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>openni2_launch</run_depend>
  <run_depend>freenect_launch</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend>
  <run_depend>pointcloud_to_laserscan</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>kobuki_auto_docking</run_depend>
  <run_depend>kobuki_safety_controller</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>turtlebot_dashboard</run_depend>
  <run_depend>yocs_cmd_vel_mux</run_depend>
  <run_depend>yocs_velocity_smoother</run_depend>

  <run_depend>thorp_msgs</run_depend>
  <run_depend>thorp_smach</run_depend>
  <run_depend>thorp_boards</run_depend>
  <run_depend>thorp_toolkit</run_depend>
  <run_depend>thorp_description</run_depend>
  <run_depend>thorp_moveit_config</run_depend>
  <run_depend>thorp_navigation</run_depend>
  <run_depend>thorp_perception</run_depend>
  <run_depend>thorp_manipulation</run_depend>
</package>
