<?xml version="1.0"?>
<package>
  <name>thorp_cannon</name>
  <version>0.1.0</version>
  <description>Thorp robot's cannon description and control</description>
  <maintainer email="jsantossimon@gmail.com">Jorge Santos Simón</maintainer>
  <author email="jsantossimon@gmail.com">Jorge Santos Simón</author> 

  <license>BSD</license>

  <url type="bugtracker">https://github.com/corot/thorp/issues</url>
  <url type="repository">https://github.com/corot/thorp</url>
  <url type="website">http://wiki.ros.org/thorp_cannon</url> 

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>sensor_msgs</run_depend>
  <run_depend>arbotix_msgs</run_depend>
  <run_depend>thorp_msgs</run_depend>
</package>
