<?xml version="1.0"?>
<package format="2">
  <name>thorp_cannon</name>
  <version>0.1.0</version>
  <description>Thorp robot's cannon control and gazebo plugin</description>
  <maintainer email="jsantossimon@gmail.com">Jorge Santos Simón</maintainer>
  <author email="jsantossimon@gmail.com">Jorge Santos Simón</author> 

  <license>BSD</license>

  <url type="bugtracker">https://github.com/corot/thorp/issues</url>
  <url type="repository">https://github.com/corot/thorp</url>
  <url type="website">http://wiki.ros.org/thorp_cannon</url> 

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>arbotix_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>thorp_msgs</depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
  </export>
</package>
