<?xml version="1.0"?>
<package format="2">
  <name>thorp_costmap_layers</name>
  <version>0.1.0</version>
  <description>The thorp_costmap_layers package</description>

  <author email="jsantossimon@gmail.com">Jorge Santos Simón</author>
  <maintainer email="jsantossimon@gmail.com">Jorge Santos Simón</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>costmap_2d</depend>
  <depend>shape_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>libjsoncpp-dev</depend>
  <depend>opencv3</depend>
  <depend>thorp_toolkit</depend>

  <export>
    <costmap_2d plugin="${prefix}/semantic_layer.xml"/>
  </export>
</package>
