<package>
  <name>thorp_msgs</name>
  <version>0.1.0</version>
  <description>Custom messages and services for Thorp packages</description>

  <maintainer email="jsantossimon@gmail.com">Jorge Santos Simón</maintainer>
  <author email="jsantossimon@gmail.com">Jorge Santos Simón</author> 

  <license>BSD</license>

  <url type="bugtracker">https://github.com/corot/thorp/issues</url>
  <url type="repository">https://github.com/corot/thorp</url>
  <url type="website">http://wiki.ros.org/thorp_msgs</url> 
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
